# voice-tg-bot

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a19d73518f3_tools_assistants_tools.py  0f2e4605e415_tools_assistants_tools.py  10f5e680f23c_vector_stores.py  26d972005194_fixes.py  2e4306e8b7da_init.py  5dc771eb1a33_files_vector_stores_files.py  97170e53c6fa_tools_assistants_tools.py  be2270eabf14_nullable_fixes.py  da1774d7a7c7_tools_assistants_tools.py  f4e199d5c74e_from_0.py  f92e58c5fac3_assisstant_aid_missdeleted.py  fd3deeb8b593_hello.py
data/: anxiety.docx
data/tools.src/: readme  save_value.txt
src/: config.py  handlers.py  logs.py  main.py
src/amplitude_client/: __init__.py
src/db_client/: __init__.py  models.py  session.py
src/models/: base_model.py  export.py  models.py
src/openai_client/: __init__.py  api.py  logic.py  session.py  utils.py  values.py
